Search sth in drop list

--- a/html/CopyText.html
+++ b/html/CopyText.html
@@ -5,19 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Copy_Text</title>
-    <style>
-        div.copyContainer{
-            display: flex;
-            height: 100vh;
-            justify-content: center;
-            align-items: center;
-        }
-    </style>
+    <link rel="stylesheet" href="../css/CopyText.css">
 </head>
 <body>
     <div class="copyContainer">
-        <input type = "text" placeholder = "請輸入想要複製的文字" style="border-radius: 10px 0 0 10px; outline: none; border: 1px solid; padding: 6.5px;">
-        <button value = "Copy" style="outline: none; border: 1px solid; border-radius: 0 10px 10px 0; padding: 5px; cursor: pointer;">複製</button>
+        <input type = "text" placeholder = "請輸入想要複製的文字">
+        <button value = "Copy">複製</button>
     </div>
     <script src = "../js/CopyText.js"></script>
 </body>
