新增sliderShow方的圓點

--- a/html/sliderShow.html
+++ b/html/sliderShow.html
@@ -17,9 +17,9 @@
 
         <div class="sliderOuterContainer">
 
-            <div id="preBtn"><i class="fas fa-arrow-square-left fa-5x"></i></div>
+            <div id="preBtn"><i class="fas fa-arrow-square-left fa-2x"></i></div>
 
-            <div id="nextBtn"><i class="fas fa-arrow-square-right fa-5x"></i></div>
+            <div id="nextBtn"><i class="fas fa-arrow-square-right fa-2x"></i></div>
 
             <div class="sliderInnerContainer">
 
@@ -38,6 +38,9 @@
                 <img src="../image/sliderShow/animals-ga8cf7bf0c_640.jpg" id="fristCloneImg" alt="1">
 
             </div>
+
+            <ul id ="contentContainer">
+            </ul>
 
         </div>
         
